--- a/backend/package.json
+++ b/backend/package.json
@@ -1,24 +1,52 @@
 {
   "name": "csn-backend",
   "version": "0.1.0",
-  "description": "Clawnker Specialist Network Backend",
-  "main": "src/dispatcher.ts",
+  "description": "Clawnker Specialist Network Backend - Multi-Agent Orchestration Layer",
+  "main": "dist/server.js",
   "scripts": {
-    "start": "ts-node src/dispatcher.ts",
-    "dev": "ts-node-dev src/dispatcher.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node dist/server.js",
+    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "build": "tsc",
+    "test": "jest",
+    "test:connection": "ts-node scripts/test-connection.ts",
+    "lint": "eslint src/**/*.ts"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "dotenv": "^16.3.1",
     "@solana/web3.js": "^1.87.6",
-    "axios": "^1.6.2"
+    "axios": "^1.6.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "uuid": "^9.0.0",
+    "ws": "^8.14.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.10.0",
+    "@types/uuid": "^9.0.7",
+    "@types/ws": "^8.5.10",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.2.2",
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.10.0"
-  }
+    "typescript": "^5.2.2"
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Clawnker/csn-hackathon"
+  },
+  "keywords": [
+    "solana",
+    "ai-agents",
+    "multi-agent",
+    "orchestration",
+    "x402",
+    "agentwallet"
+  ],
+  "author": "Clawnker Team",
+  "license": "MIT"
 }
