--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "uuid": "^9.0.0",
-    "ws": "^8.14.2"
+    "ws": "^8.14.2",
+    "x402-solana": "^2.0.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
