Rebrand: Remove CSN/Magos/Aura references, use Hivemind Protocol
- ASCII banner now shows 'Hivemind Protocol' instead of 'CSN'
- Removed specific agent names (Magos, Aura) from UI
- Specialists now show generic names: 'Market Oracle', 'Social Analyst'
- Updated all documentation to use Hivemind branding
- Backend logs now use [Hivemind] prefix
- skill.md updated with Hivemind naming

The marketplace concept remains - agents are hired on-demand,
but without reference to our internal CSN agent names.

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "csn-backend",
   "version": "0.1.0",
-  "description": "Clawnker Specialist Network Backend - Multi-Agent Orchestration Layer",
+  "description": "Hivemind Protocol Backend - Multi-Agent Orchestration Layer",
   "main": "dist/server.js",
   "scripts": {
     "start": "node dist/server.js",
